<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".bundle.bundleActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="149dp"
            android:layout_height="135dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/kino_id"
            android:textColor="#000"

            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/kino_name"
                android:layout_width="192dp"
                android:layout_height="87dp"
                android:gravity="center_vertical"
                android:text="name"
                android:textColor="#000"
                android:textSize="25sp" />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"

                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/Rating" />
                <TextView

                    android:id="@+id/kino_vote"
                    android:text="vote"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/kino_vote_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text=" Count vote" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/site" />

        <TextView
            android:id="@+id/kino_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:autoLink="web"
            android:linksClickable="true"
            tools:text="TextView" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/primera" />


        <TextView
            android:id="@+id/kino_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:autoLink="map"
            tools:text="TextView"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/country" />


        <TextView
            android:id="@+id/kino_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            tools:text="TextView"
            android:autoLink="phone"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/actor" />


        <TextView
            android:id="@+id/kino_actors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            tools:text="TextView"
            android:layout_marginStart="5dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/rejiser" />

        <TextView
            android:id="@+id/kino_rejiser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            tools:text="TextView"
            android:layout_marginStart="5dp" />


    </LinearLayout>





</LinearLayout>